sh2c/tests/fixtures/diag_span_multiline_expr.stderr.expected
compile error: diag_span_multiline_expr.sh2:2:11: try_run() must be bound via let (e.g., let r = try_run(...))
    print(try_run(
          ^
